#+title: Change log for Emacs-enhanced
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for Emacs-enhanced

* Versions

** <2025-01-11>

- =consult-history= potential replacement using enhanced eshell setup
  - Appended Bash history to eshell history on load.
  - Introduced `my/eshell-history-completing-read`.
  - Added `M-r` for eshell history search.
    
** <2025-01-08>

- Added open-with replacement using dired.
- Replacing =dired-async-mode= with =my/rsync= function to enable asynchronous copy directly from dired.
- Bind `C` in `dired-mode-map` to invoke the new rsync functionality.

** <2025-01-07>

Add eglot replacement using custom etags functions and keybindings

- Added `my/etags-load`: Locate and load the nearest TAGS file.
- Added `my/etags-update`: Generate etags using an external script if available.
- Added `my/generate-etags`: Recursively create etags for C, C++, C#, and Ada files.
- Introduced `predicate-exclusion-p` for directory exclusion logic.
- Bound `my/etags-load` to `C-x p l` and `my/etags-update` to `C-x p u`.

** <2025-01-05>

icomplete-in-buffer setup and completion functions to try and replace corfu/company

- Added `(setq icomplete-in-buffer t)` to improve in-buffer completion behavior.
- Documented custom functions =my/simple-completion-at-point= utilizing =completion-in-region= and =completing-read=
- Introduced `C-c TAB` keybinding for invoking custom completion.
- Disabled `completion-auto-help` globally except in minibuffer.
- Customized `TAB` key binding for minibuffer-local-completion-map.
- Suppressed completion buffer help header via `completion-show-help`.
- Updated documentation to reflect these adjustments and their rationale.

** <2025-01-01>

Refactor popup handling and improve buffer filtering logic
